--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,1 +1,16 @@
 {{!-- Setup the main.handlebars file so it's able to be used by Handlebars. --}}
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="public/assets/css/burger_style.css" type="text/css" />
+        <title>How Much Can You Burger?!</title>
+        <script src="https://code.jquery.com/jquery.js"></script>
+        <script src="models/burger.js"></script>
+</head>
+    <body>
+        {{{ body }}}
+    </body>
+</html>
