--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,2 +1,33 @@
-{{!-- Setup the index.handlebars to have the template that Handlebars can render onto. --}}
-{{!-- Create a button in index.handlebars that will submit the user input into the database. --}}
+{{!-- Template that Handlebars can render onto. --}}
+{{!-- Button in index.handlebars that will submit the user input into the database. --}}
+
+<h1>How Much Can You Burger?!</h1>
+<h3>Add all the burgers you want to try, then devour your burger collection! Enjoy <span role="img" aria-label="Smiling Eyes Face">😊</span></h3>
+
+{{!-- Burgers to try - not devoured --}}
+<ul>
+    {{#each burgers}}
+      {{#if devoured === !}}
+        {{> burgers/}}
+      {{/if}}
+    {{/each}}
+</ul>
+
+{{!-- Burgers devoured --}}
+<ul>
+    {{#each burgers}}
+      {{#if devoured}}
+        {{> burgers/}}
+      {{/if}}
+    {{/each}}
+</ul>
+
+<h2>Add Your Burgers</h2>
+<form class="create-form">
+    <div class="form-group">
+        <label for="burg">Burger Type:</label>
+        <input type="text" name="type" id="burg">
+    </div>
+
+    <button type="submit">ADD BURGER!</button>
+</form>
