--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -5,11 +5,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="public/assets/css/burger_style.css" type="text/css" />
+        <link rel="stylesheet" href="/assets/css/burger_style.css" type="text/css" />
         <title>How Much Can You Burger?!</title>
         <script src="https://code.jquery.com/jquery.js"></script>
-        <script src="models/burger.js"></script>
+        <script src="/models/burger.js"></script>
 </head>
+    <div class="container">
+        <img src="/assets/img/burger-10973.png" alt="burger image">
+    </div>
+
     <body>
         {{{ body }}}
     </body>
