--- a/public/assets/css/burger_style.css
+++ b/public/assets/css/burger_style.css
@@ -1,7 +1,7 @@
 body {
     text-align: center;
-    background: radial-gradient(#FF7433, white, white);
-    background-repeat: no-repeat;
+    background: #FFB870;
+    
 }
 
 img {
