added another form group to toggle devoured when a new burger is input

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -28,6 +28,11 @@
         <label for="burg">Burger Type:</label>
         <input type="text" name="type" id="burg">
     </div>
+    <br>
+    <div class="form-group">
+        <input type="radio" name="devoured" value="1">Devoured!<br>
+        <input type="radio" name="devoured" value="0">Saved for Later!
+    </div>
 
     <button type="submit">ADD BURGER!</button>
 </form>
