--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -8,7 +8,7 @@
         <link rel="stylesheet" href="/assets/css/burger_style.css" type="text/css" />
         <title>How Much Can You Burger?!</title>
         <script src="https://code.jquery.com/jquery.js"></script>
-        <script src="../models/burger.js"></script>
+        <script src="/js/burgers.js"></script>
 </head>
     <div class="container">
         <img src="/assets/img/burger-10973.png" alt="burger image">
