added function in orm to convert object key/value as a string int arr

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -30,8 +30,8 @@
     </div>
     <br>
     <div class="form-group">
-        <input type="radio" name="devoured" value="1">Devoured!<br>
-        <input type="radio" name="devoured" value="0">Saved for Later!
+        <input type="radio" name="devoured" value="1" checked> Devoured!<br>
+        <input type="radio" name="devoured" value="0"> Saved for Later!
     </div>
 
     <button type="submit">ADD BURGER!</button>
