--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -25,7 +25,7 @@
 <h2>Add Your Burgers</h2>
 <form class="create-form">
     <div class="form-group">
-        <label for="burg">Burger Type:</label>
+        <label for="burg">Burger:</label>
         <input type="text" name="type" id="burg">
     </div>
     <br>
