--- a/public/assets/css/burger_style.css
+++ b/public/assets/css/burger_style.css
@@ -1,11 +1,19 @@
 body {
     text-align: center;
     background: #FFB870;
-    
+    color: white;
 }
 
 img {
     align-content: center;
     height: 200px;
     padding-top: 7%;
+}
+
+.row {
+    padding: 20px;
+}
+
+li {
+    list-style-type: none;
 }
