--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,38 +1,52 @@
 {{!-- Template that Handlebars can render onto. --}}
 {{!-- Button in index.handlebars that will submit the user input into the database. --}}
 
-<h1>How Much Can You Burger?!</h1>
-<h3>Add all the burgers you want to try, then devour your burger collection! Enjoy <span role="img" aria-label="Smiling Eyes Face">😊</span></h3>
+<div class="row">
+  <div class="col-md-12">
+    <h1>How Much Can You Burger?!</h1>
+    <h3>Add all the burgers you want to try, then devour your burger collection! Enjoy <span role="img" aria-label="Smiling Eyes Face">😊</span></h3>
+  </div>
+</div>
 
 {{!-- Burgers to try - not devoured --}}
-<ul>
-    {{#each burgers}}
-      {{#unless devoured}}
-        {{> burgers/burger-block devoured=true}}
-      {{/unless}}
-    {{/each}}
-</ul>
+<div class="row">
+  <div class="col-md-6">
+    <ul>
+        {{#each burgers}}
+          {{#unless devoured}}
+            {{> burgers/burger-block devoured=true}}
+          {{/unless}}
+        {{/each}}
+    </ul>
+  </div>
 
 {{!-- Burgers devoured --}}
-<ul>
-    {{#each burgers}}
-      {{#if devoured}}
-        {{> burgers/burger-block devoured=false}}
-      {{/if}}
-    {{/each}}
-</ul>
+  <div class="col-md-6">
+    <ul>
+        {{#each burgers}}
+          {{#if devoured}}
+            {{> burgers/burger-block devoured=false}}
+          {{/if}}
+        {{/each}}
+    </ul>
+  </div>
+</div>
 
-<h2>Add Your Burgers</h2>
-<form class="create-form">
-    <div class="form-group">
-        <label for="burg">Burger:</label>
-        <input type="text" name="type" id="burg">
-    </div>
-    <br>
-    <div class="form-group">
-        <input type="radio" name="devoured" value="1" checked> Devoured!<br>
-        <input type="radio" name="devoured" value="0"> Saved for Later!
-    </div>
+<div class="row">
+  <div class="col-md-12">
+    <h2>Add Your Burgers</h2>
+    <form class="create-form">
+        <div class="form-group">
+            <label for="burg">Burger:</label>
+            <input type="text" name="type" id="burg">
+        </div>
+        <br>
+        <div class="form-group">
+            <input type="radio" name="devoured" value="1" checked> Devoured!<br>
+            <input type="radio" name="devoured" value="0"> Saved for Later!
+        </div>
 
-    <button type="submit">ADD BURGER!</button>
-</form>
+        <button type="submit" class="btn btn-light btn-sm">ADD BURGER!</button>
+    </form>
+  </div>
+</div>
