--- a/views/partials/burgers/burger-block.handlebars
+++ b/views/partials/burgers/burger-block.handlebars
@@ -1,7 +1,7 @@
 <li>
     {{name}}
 
-    <button class="change-devoured" data-id="{{id}}" data-newdevour="{{devoured}}">
+    <button class="change-devoured btn btn-light btn-sm" data-id="{{id}}" data-newdevour="{{devoured}}">
         {{#if devoured}}Eat. This. Burger.{{else}}Devoured. So Good. Chef's Kiss!{{/if}}
     </button>
 </li>
