--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -38,7 +38,7 @@
     <form class="create-form">
         <div class="form-group">
             <label for="burg">Burger:</label>
-            <input type="text" name="type" id="burg">
+            <input type="text" name="name" id="burg">
         </div>
         <br>
         <div class="form-group">
